<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pages.detail.DetailUserActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/appbar_detail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingHorizontal="16dp">

        <ImageView
            android:id="@+id/btn_back_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/Headline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="16dp"
            android:layout_toStartOf="@id/menu_add_fav"
            android:layout_toEndOf="@id/btn_back_detail"
            android:text="@string/title" />

        <ImageView
            android:id="@+id/menu_add_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_favorite_border_24"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/menu_remove_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_favorite_24"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar_detail">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/ic_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Headline3"
            android:text="@string/_00"
            app:layout_constraintEnd_toStartOf="@+id/tv_folllowers"
            app:layout_constraintStart_toEndOf="@+id/user_avatar"
            app:layout_constraintTop_toTopOf="@+id/tv_folllowers" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repository"
            style="@style/Subtitle2"
            android:layout_marginTop="-6dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_repo"
            app:layout_constraintStart_toStartOf="@+id/tv_repo"
            app:layout_constraintTop_toBottomOf="@+id/tv_repo" />

        <TextView
            android:id="@+id/tv_folllowers"
            style="@style/Headline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/_00"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toEndOf="@+id/user_avatar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            style="@style/Subtitle2"
            android:layout_marginTop="-6dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_folllowers"
            app:layout_constraintStart_toStartOf="@+id/tv_folllowers"
            app:layout_constraintTop_toBottomOf="@+id/tv_folllowers" />

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Headline3"
            android:text="@string/_00"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_folllowers"
            app:layout_constraintTop_toTopOf="@+id/tv_folllowers" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            style="@style/Subtitle2"
            android:layout_marginTop="-6dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_following"
            app:layout_constraintStart_toStartOf="@+id/tv_following"
            app:layout_constraintTop_toBottomOf="@+id/tv_following" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_fullname"
        style="@style/Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginStart="20dp"
        android:text="@string/full_name" />

    <TextView
        android:id="@+id/tv_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biography"
        style="@style/Subtitle"
        android:layout_marginStart="20dp"
        android:layout_below="@id/tv_fullname"/>

    <LinearLayout
        android:id="@+id/layout_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_bio"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_company"
            style="@style/Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawablePadding="10dp"
            android:text="@string/company"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_baseline_company_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_company"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_location"
            style="@style/Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:text="@string/location"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_outline_loc_24" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/something_wrong"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:background="?attr/colorPrimaryDark"
        android:layout_below="@+id/appbar_detail"
        app:layout_constraintTop_toBottomOf="@+id/appbar_detail">

        <ImageView
            android:id="@+id/img_not_found"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:src="@drawable/img_went_wrong"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/Headline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/img_not_found"
            app:layout_constraintStart_toStartOf="@+id/img_not_found"
            app:layout_constraintTop_toBottomOf="@+id/img_not_found" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="?attr/colorPrimaryDark"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center" />
    </RelativeLayout>

</RelativeLayout>