<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="2dp"
    android:layout_marginHorizontal="6dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@color/black"
            android:contentDescription="@string/img_developer_photo_profile_desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/iv_avatar"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_username"
                style="@style/Title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ic_type_user"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="6dp"
                    android:src="@color/green" />

                <TextView
                    android:id="@+id/tv_type_user"
                    style="@style/Subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/ic_type_user"
                    android:text="@string/user_type" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ic_link"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="2dp"
                    android:src="@drawable/ic_baseline_language_24"
                    app:tint="@color/blue" />

                <TextView
                    android:id="@+id/tv_git_url"
                    style="@style/Subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@id/ic_link"
                    android:text="@string/github_url"
                    android:textColor="@color/blue" />
            </RelativeLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>